fix some places where resources were not safely closed.